--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 											Excel Dashboard</a></h2>
 										</header>
 										<a href="https://1drv.ms/x/c/4feefa64dd2a9c4d/EeMPGvXM3OdMp-tJmgjClYgBxdFR2c0kB7bF16MiA9CL-g" class="image fit"><img src="images/Time Series Analysis screenshot.png" alt="" /></a>
-										<p>Excel is a powerful tool for analyst, while saving huge cost. As part of Excel, Power Pivot data model can handle a staggering amount of data of around 2 billions rows, table, columns, Power Query can support everything with ETL. In this project, the main objective is to analyse profit, assess performance over time and across customer geography, as well as identifying pattern and trend. The dashboard is highly dynamic and tells a story, allows users to switch between profit, revenue, transaction over years, identify top 3 months, weekdays by profit, slice and dice across year, month, client country in a click.   </p>
+										<p>Excel is a powerful tool for analyst, while saving huge cost. As part of Excel, Power Pivot data model can handle a staggering amount of data of around 2 billions rows, table, columns, Power Query can support everything with ETL. In this project, the main objective is to analyse profit, assess performance over time and across customer geography, as well as identifying pattern and trend. The dashboard is highly dynamic and tells a story, allows users swith between profit, revenue, transaction over years, identify top 3 months, weekdays by profit, slice and dice across year, month, client country in a click.   </p>
 										<ul class="actions special">
 											<li><a href="https://1drv.ms/x/c/4feefa64dd2a9c4d/EeMPGvXM3OdMp-tJmgjClYgBxdFR2c0kB7bF16MiA9CL-g" class="button">LIVE DEMO</a></li>
 										</ul>
@@ -127,6 +127,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									</p>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiNmQyNjc1NTktYmIxMy00N2I2LTkwMjktMzNiMjNlZmM5MzQ3IiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9" class="button">LIVE DEMO</a></li>
+									</ul>
+								</article>
+								
+								<article>
+									<header>
+										
+										<h2><a href="https://1drv.ms/b/c/4feefa64dd2a9c4d/EcYyZ0I0ajFHrf43hgBiQZ4B-S6Sg74SoEcZsvkWSZ_rJg?e=QDIhkj">SQL<br />
+										Data Cleaning and Exploratory Analysis</a></h2>
+									</header>
+									<iframe src="https://1drv.ms/b/c/4feefa64dd2a9c4d/IQTGMmdCNGoxR63-N4YAYkGeAcwWbgDo8DW8d6TdfBnW0rQ" width="400" height="400" frameborder="0" scrolling="no"></iframe>
+									<p>A SQL project to conduct importing, shaping data before implementing a exploratory analysis to answer complex questions and draw interesting insight, with the combination of comprehensive and advanced techniques, including window functions, multi ctes, subqueries, as well as dynamic procedure, recursive, cursor for automation with job agent.</p>
+									<ul class="actions special">
+										<li><a href="https://1drv.ms/b/c/4feefa64dd2a9c4d/EcYyZ0I0ajFHrf43hgBiQZ4B-S6Sg74SoEcZsvkWSZ_rJg?e=QDIhkj" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
