--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										Power BI</a></h2>
 									</header>
 									<a href="https://app.powerbi.com/view?r=eyJrIjoiYTA5ZWEzYjktMDI2NS00Mzk4LTk5YmMtODhkZGQ1NDBmOGI0IiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9" class="image fit"><img src="images/HR Monthly Insight.png" alt="" /></a>
-									<p>This dashboard is highly interactive, and comprises of two views. The first tab is HR Overview provides users with insight into historical trend. The second tab is analysis of HR stats monthly. Both views allows users to dynamically switch and customise period and category to analysise data, expand insight by hovering over info icon or data point .</p>
+									<p>This dashboard is highly interactive, and comprises of two views. The first tab is HR Overview provides users with insight into historical trend. The second tab is analysis of HR stats monthly. Both views allow users to dynamically switch and customise period and category to analysise data, expand insight by hovering over info icon or data point .</p>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiYTA5ZWEzYjktMDI2NS00Mzk4LTk5YmMtODhkZGQ1NDBmOGI0IiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9" class="button">LIVE DEMO</a></li>
 									</ul>
