--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 						<!-- Posts -->
 						<section class="posts">
+
+							<article>
+								<header>
+									
+									<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiYmRiMjczMGUtZjU5Zi00NDgyLTllZGQtNzAzMWVmZWNmNGIyIiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9">HR DIVERSITY<br />
+									Power BI</a></h2>
+								</header>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiYmRiMjczMGUtZjU5Zi00NDgyLTllZGQtNzAzMWVmZWNmNGIyIiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9">
+								<iframe class="image fit" title="HR Diversity and Lookup (FRUIT WELL)" width="500" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYmRiMjczMGUtZjU5Zi00NDgyLTllZGQtNzAzMWVmZWNmNGIyIiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								</a>
+								<p>Fruit Well company quests for a signature stylish dashboard that give them insights into diversity of humance resources and to look up employee information, as well as being able to narrow down to specific department, country and date period. With the use of various advanced data tranformation, modelling, DAX, and visualisation techniques, the dashboard allows users easily customise and grab infomation to drive decision such as which age, gender, education needs more hires, which countries are too dominant and their total percentage, together with a swift lookup for individual employee details, including their image. On top of that, users can personalise preference between dark/light mode to support their vision need.</p>
+								<ul class="actions special">
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiYmRiMjczMGUtZjU5Zi00NDgyLTllZGQtNzAzMWVmZWNmNGIyIiwidCI6IjUzY2EyYWI3LTc3ZDctNGZmNS04MDljLWMxOGRiZjM5NzVjNyJ9" class="button">LIVE DEMO</a></li>
+								</ul>
+							</article>
+
 								<article>
 									<header>
 										
@@ -136,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h2><a href="https://1drv.ms/b/c/4feefa64dd2a9c4d/EcYyZ0I0ajFHrf43hgBiQZ4B-S6Sg74SoEcZsvkWSZ_rJg?e=QDIhkj">SQL<br />
 										Data Cleaning and Exploratory Analysis</a></h2>
 									</header>
-									<iframe src="https://1drv.ms/b/c/4feefa64dd2a9c4d/IQTGMmdCNGoxR63-N4YAYkGeAcwWbgDo8DW8d6TdfBnW0rQ" width="400" height="400" frameborder="0" scrolling="no"></iframe>
+									<iframe class="image fit" src="https://1drv.ms/b/c/4feefa64dd2a9c4d/IQTGMmdCNGoxR63-N4YAYkGeAcwWbgDo8DW8d6TdfBnW0rQ" width="400" height="400" frameborder="0" scrolling="no"></iframe>
 									<p>A SQL project to conduct importing, shaping data before implementing a exploratory analysis to answer complex questions and draw interesting insight, with the combination of comprehensive and advanced techniques, including window functions, multi ctes, subqueries, as well as dynamic procedure, recursive, cursor for automation with job agent.</p>
 									<ul class="actions special">
 										<li><a href="https://1drv.ms/b/c/4feefa64dd2a9c4d/EcYyZ0I0ajFHrf43hgBiQZ4B-S6Sg74SoEcZsvkWSZ_rJg?e=QDIhkj" class="button">Live Demo</a></li>
