--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>London, UK</p>
+								<p>Hai Phong, Vietnam</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p>07763508594</p>
+								<p>0084329525648</p>
 							</section>
 							<section>
 								<h3>Email</h3>
