add tableau clustering analysis

--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<article>
 									<header>
 										
+										<h2><a href="https://public.tableau.com/views/Section8-clusteranalysis/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Clustering Analysis<br />
+										Tableau</a></h2>
+									</header>
+									<a href="https://public.tableau.com/views/Section8-clusteranalysis/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Tableau - Cluster Analysis.png"alt="" /></a>
+									<p>This project usetilises tableau to conduct K-means clustering and linear regression to draw insights into return on Marketing spend accross region, stores, as well as support investment plan.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/views/Section8-clusteranalysis/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button">Live Demo</a></li>
+									</ul>
+								</article>
+
+
+								<article>
+									<header>
+										
 										<h2><a href="https://public.tableau.com/views/SaleDashboard-US/Sales?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Sales Performance<br />
 										Tableau</a></h2>
 									</header>
