--- a/index.html
+++ b/index.html
@@ -233,9 +233,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										Tableau</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/Section8-clusteranalysis/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Tableau - Cluster Analysis.png"alt="" /></a>
-									<p>This project usetilises tableau to conduct K-means clustering and linear regression to draw insights into return on Marketing spend accross region, stores, as well as support investment plan.</p>
+									<p>This project usetilises tableau to conduct K-means clustering and linear regression (based on Revenue, MKT Spend, Population) to draw insights into return on Marketing spend accross region, stores, as well as support investment plan of a laundry service business.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/Section8-clusteranalysis/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button">Live Demo</a></li>
+									</ul>
+								</article>
+
+
+								<article>
+									<header>
+										
+										<h2><a href="https://public.tableau.com/views/CustomerSegmentation_17568967338770/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Customer Segementation<br />
+										Tableau</a></h2>
+									</header>
+									<a href="https://public.tableau.com/views/CustomerSegmentation_17568967338770/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/tableau - customer segmentation.png"alt="" /></a>
+									<p>The project is to conduct a customer segmentation analysis of banking customers.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/views/CustomerSegmentation_17568967338770/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 
